# water-controlling

./: LICENSE
server/: .gitignore  CMakeLists.txt  Dockerfile  buildDockerImage.sh  gpio.cpp  gpio.h  gpio_config.cpp  gpio_config.h  gpio_config.json  interval.cpp  interval.h  jsonVariant.hpp  log.cpp  log.h  main.cpp  prerequisities.sh  restapi.cpp  restapi.h  restapi_impl.cpp  restapi_impl.h  service.hpp  storage.cpp  storage.h  water_manager.cpp  water_manager.h
server/db/: database.h  db.cpp  db.h  defaultDb.sql  sqlitedb.cpp  sqlitedb.h  zavlaha.db
